# car-rank

./: .gitmodules  CMakeLists.txt  car_price.py  car_rank.py  car_score.py  car_score_util.py  deploy.sh  prepare.py  readme.txt  update_price.sh  update_scores.sh
Modules/: FindGFlags.cmake  FindGLOG.cmake  FindGTest.cmake  FindLibMemcached.cmake  FindMemcached.cmake  FindMySQL.cmake  FindMySQLConnectorCpp.cmake  FindPugiXML.cmake
config/: rank_svr.conf.example
contrib/: draw_tree.py  gen_feat_idx.py  press_test.py  rank_client.php  rank_client.py  ranksvr.sh
demo/: application.py
docs/: exp-831.txt
hive/: query_full_log.hql  query_log.hql
hive/query_log/: clean_db.sh  query_detail.hql  query_detail.tbl.hql  query_full_log.hql  query_log.hql  query_log.tbl.hql  query_log_0616.hql  run.sh  run_detail.sh
http/: CMakeLists.txt  connection.cpp  connection.hpp  dummy_server.cpp  example_dummy_server.cpp  header.hpp  io_service_pool.cpp  io_service_pool.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp
legacy/: car_rank.py  car_score.py  interval_db.py  log.py  mydb.py  mydb_conf.py  rank_feats.py  rank_legacy.py  rank_price.py  rank_score.py  rank_users.py  readme.txt  score_util.py  update_price.sh  update_scores.sh
legacy/demo/handlers/: metrics.py
legacy/schema/: car_rank_feats.sql  car_rank_legecy.sql  car_rank_score.sql  car_rank_users.sql  car_rank_weights.sql
legecy/demo/handlers/: base.py
mapred/: mk_mod.sh  utils.py
mapred/corpus/: add_part.hql  corpus.tbl.hql  mapper.py  reducer.py  run.sh  test.data
mapred/corpus_ranklib/: mapper.py  reducer.py  run.sh  temp.corpus_rl.hql
mapred/legacy/: add_part.hql  get_feats.hql  get_feats.sh  legacy.desc  legacy.hql  legacy.tbl.hql  mapper.py  metrics.tbl.hql  rank_feats.hql  reducer.py  run.sh  temp.legacy.hql
mapred/metrics/: add_part.hql  mapper.py  metrics.hql  metrics.tbl.hql  reducer.py  report.py  report.sh  run.sh
mapred/pointwise_corpus/: reducer.py  run.sh
mapred/ranklib/: feats.sel  feats.txt  mapper.py  ranklib.sh  temp.corpus_rl.hql
mapred/utils/: table.py
metrics/: __init__.py  server.conf.sample  server.py
metrics/handlers/: __init__.py
metrics/templates/: metrics.html
metrics/utils/: __init__.py  mydb.py  xcrypt.py
ranking/: CMakeLists.txt  data_point.hpp  ensemble.cpp  ensemble.hpp  ensemble_test.cpp  feat_idx.hpp  feature.hpp  feature_db.cpp  feature_db.hpp  json_parser.cpp  json_parser.hpp  json_parser_test.cpp  json_request.cpp  json_request.hpp  json_request_test.cpp  lambda_mart.cpp  lambda_mart.hpp  legacy.cpp  legacy.hpp  legacy_db.cpp  legacy_db.hpp  legecy.cpp  legecy.hpp  legecy_db.cpp  legecy_db.hpp  mart.cpp  ranker.hpp
schema/: car_rank.sql  car_rank_feats.sql  car_rank_price.sql  car_rank_score.sql
svr/: CMakeLists.txt  main.cpp  rank_svr.cpp  rank_svr.hpp
util/: CMakeLists.txt  lru_cache.hpp  mem_cache.cpp  mem_cache.hpp  util.cpp  util.hpp
